GZIP Pre-compress